--- a/.github/workflows/release_charts.yml
+++ b/.github/workflows/release_charts.yml
@@ -33,6 +33,12 @@ jobs:
           pathInArchive: linux-amd64/helm
       - run: helm version
 
+      - name: Add repositories
+        run: |
+          for dir in $(ls -d charts/*/); do
+            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
+          done
+
       # https://github.com/helm/chart-releaser-action
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
