--- a/.github/workflows/check-codeowners.yaml
+++ b/.github/workflows/check-codeowners.yaml
@@ -7,7 +7,7 @@ on: pull_request
 
 jobs:
   find-diffs:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Check if CODEOWNERS file is up to date with maintainers from helm chart(s)
 
     defaults:
@@ -15,7 +15,7 @@ jobs:
         shell: bash
 
     steps:
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
+      - uses: actions/checkout@v4
         name: Checkout
 
       - name: install yq
