add readerPassword on secrets.yaml set values for image  readerUserSetup instead of hardcoded ones change required images on values.yaml to point to pharmaledgerassoc ecr

--- a/charts/couchdb/templates/job-rouser.yaml
+++ b/charts/couchdb/templates/job-rouser.yaml
@@ -28,8 +28,9 @@ spec:
       serviceAccountName: {{ template "couchdb.serviceAccount" . }}
       {{- end }}
       containers:
-        - name: curl
-          image: curlimages/curl:latest
+        - name: readuser-setup
+          image: {{ .Values.readerUserSetup.image.repository }}:{{ .Values.readerUserSetup.image.tag }}
+          imagePullPolicy: {{ .Values.readerUserSetup.image.pullPolicy }}
           command:
             - "sh"
             - "-c"
