--- a/charts/couchdb/templates/secrets.yaml
+++ b/charts/couchdb/templates/secrets.yaml
@@ -17,5 +17,6 @@ data:
   cookieAuthSecret: {{ template "couchdb.defaultsecret" .Values.cookieAuthSecret }}
 {{- if  .Values.adminHash  }}
   adminHash: {{ .Values.adminHash | b64enc | quote }}
+  readerPassword: {{ template "couchdb.defaultsecret" .Values.readerPassword }}
 {{- end -}}
 {{- end -}}
