--- a/charts/couchdb/values.yaml
+++ b/charts/couchdb/values.yaml
@@ -1,5 +1,5 @@
 # -- the initial number of nodes in the CouchDB cluster.
-clusterSize: 3
+clusterSize: 1
 
 # -- If allowAdminParty is enabled the cluster will start up without any database
 # administrator account; i.e., all users will be granted administrative
@@ -18,9 +18,9 @@ allowAdminParty: false
 autoSetup:
   enabled: false
   image:
-    repository: curlimages/curl
+    repository: public.ecr.aws/pharmaledgerassoc/curlimages/curl
     tag: latest
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   defaultDatabases:
     - _global_changes
 
@@ -43,6 +43,7 @@ adminPasswordKey: ""
 
 adminUsername: admin
 # adminPassword: this_is_not_secure
+# readerPassword: reader_password 
 # adminHash: -pbkdf2-this_is_not_necessarily_secure_either
 # cookieAuthSecret: neither_is_this
 
@@ -50,6 +51,10 @@ adminUsername: admin
 ## Create readerUserSetup user
 readerUserSetup:
   enabled: true
+  image:
+    repository: public.ecr.aws/pharmaledgerassoc/curlimages/curl
+    tag: latest
+    pullPolicy: IfNotPresent
 
 ## When enabled, will deploy a networkpolicy that allows CouchDB pods to
 ## communicate with each other for clustering and ingress on port 5984
@@ -98,7 +103,7 @@ persistentVolumeClaimRetentionPolicy:
 
 ## The CouchDB image
 image:
-  repository: couchdb
+  repository: public.ecr.aws/pharmaledgerassoc/couchdb
   tag: 3.3.3
   pullPolicy: IfNotPresent
 
@@ -112,7 +117,7 @@ searchImage:
 enableSearch: false
 
 initImage:
-  repository: busybox
+  repository: public.ecr.aws/pharmaledgerassoc/busybox
   tag: latest
   pullPolicy: Always
 
